# duck-cli

./: .gitignore  CMakeLists.txt  README.md  build.sh  release.sh
.github/workflows/: build.yml
src/: CMakeLists.txt  main.cpp
src/commands/: build.cpp  commands.h  init.cpp  install.cpp  publish.cpp
src/utils/: config.cpp  config.h  http.cpp  http.h
